--- a/css/styles.css
+++ b/css/styles.css
@@ -633,6 +633,63 @@ footer {
 .footer-wrap {
   margin-left: 70px;
 }
+/* form footer */
+
+.title-form-footer{
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.15;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--white-color);
+}
+
+.form-wrap{
+  margin-left: 93px;
+}
+
+.form-footer{
+  display: flex;
+}
+.title-form-footer{
+  margin-bottom: 20px;
+}
+
+.footer-button{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 12px;
+  gap: 10px;
+  padding: 10px 28px;
+  border-radius: 4px;
+  color: var(--white-color);
+  background-color: var(--accent-color);
+  border: 1px solid transparent;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  cursor: pointer;
+  fill: var(--white-color);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-button:hover,
+.footer-button:focus{
+  background-color: #188ce8;
+}
+
+.footer-input{
+  width: 358px;
+height: 50px;
+border: 1px solid rgba(255, 255, 255, 0.3);
+filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+border-radius: 4px;
+background:var(--secondary-bcg-color);
+padding: 15px 16px;
+}
+
 /* modal */
 
 .backdrop {
@@ -654,7 +711,7 @@ footer {
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
   width: 528px;
-  height: 581px;
+  min-height: 581px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
@@ -665,7 +722,7 @@ footer {
   visibility: hidden;
   pointer-events: none;
 }
-.iconc-lose {
+.iconc-close {
   position: absolute;
   top: 8px;
   right: 8px;
@@ -673,13 +730,20 @@ footer {
   border: 1px solid rgba(0, 0, 0, 0.1);
   background-color: var(--white-color);
   cursor: pointer;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.iconc-close:hover,
+.iconc-close:focus {
+  fill: var(--accent-color);
+}
+
 .form-title {
   font-weight: 700;
   font-size: 20px;
   line-height: 1.15;
   text-align: center;
   color: var(--secondary-text-color);
+  margin-bottom: 12px;
 }
 /* form */
 
@@ -691,6 +755,7 @@ footer {
   letter-spacing: 0.01em;
   color: var(--primary-text-color);
   margin-bottom: 4px;
+  margin-top: 10px;
 }
 
 .form-control {
@@ -731,57 +796,67 @@ footer {
 }
 
 .checkbox-wrap {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   position: relative;
+  margin-top: 20px;
   margin-bottom: 30px;
 }
 
 .checkbox-input {
   appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
 }
 
-.checkbox-label {
+.checkbox-icon {
   display: block;
-  position: relative;
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 24px;
-  letter-spacing: 0.03em;
-  color: #757575;
-}
-
-/* .checkbox-label::before {
-  content: '';
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 16px;
-  height: 16px;
-  border: 1px solid var(--secondary-text-color);
-} */
-
-.icon-check {
-  background-color: var(--white-color);
-  fill: var(--white-color);
-  top: 50%;
-  left: 8px;
-  transform: translate(-50%);
+  top: 4px;
+  left: 6px;
   z-index: -1;
   width: 16px;
   height: 15px;
-  border: 2px solid var(--black-color);
+  border: 2px solid var(--primary-text-color);
   border-radius: 2px;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
-  background-color 250ms  cubic-bezier(0.4, 0, 0.2, 1),
-  fill 250ms  cubic-bezier(0.4, 0, 0.2, 1);
+}
+.checkbox-label {
+  position: relative;
+  padding-left: 23px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  color: var(--primary-text-color);
+}
+.checkbox-input:checked + .checkbox-icon {
+  border: none;
+  background-color: var(--accent-color);
 }
 
-.checkbox-input:checked + .icon-check {
-  fill: var(--accent-color);
+.form-linc {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  text-decoration-line: underline;
+  color: var(--accent-color);
+}
+
+.form-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+  padding: 10px 52px;
+  border-radius: 4px;
+  color: var(--white-color);
   background-color: var(--accent-color);
-  border-color: var(--accent-color);
+  border: 1px solid transparent;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form-button:hover,
+.form-button:focus {
+  background-color: #188ce8;
 }
