--- a/css/styles.css
+++ b/css/styles.css
@@ -687,6 +687,7 @@ border: 1px solid rgba(255, 255, 255, 0.3);
 filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
 border-radius: 4px;
 background:var(--secondary-bcg-color);
+color: var(--white-color);
 padding: 15px 16px;
 }
 
@@ -728,6 +729,8 @@ padding: 15px 16px;
   right: 8px;
   border-radius: 50%;
   border: 1px solid rgba(0, 0, 0, 0.1);
+  width: 30px;
+  height: 30px;
   background-color: var(--white-color);
   cursor: pointer;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -767,6 +770,7 @@ padding: 15px 16px;
   padding: 12px 12px 12px 42px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
+  height: 40px;
   outline: none;
 }
 
@@ -787,6 +791,7 @@ padding: 15px 16px;
 }
 
 .form-textarea {
+  resize: none;
   width: 100%;
   height: 120px;
   padding: 12px;
@@ -795,10 +800,21 @@ padding: 15px 16px;
   outline: none;
 }
 
+.form-textarea::placeholder{
+  font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 12px;
+line-height: 14px;
+letter-spacing: 0.01em;
+color: color: rgba(117, 117, 117, 0.5);
+}
+
 .checkbox-wrap {
   position: relative;
   margin-top: 20px;
   margin-bottom: 30px;
+  margin-left: 11px;
 }
 
 .checkbox-input {
@@ -810,8 +826,8 @@ padding: 15px 16px;
 .checkbox-icon {
   display: block;
   position: absolute;
-  top: 4px;
-  left: 6px;
+  top: 5px;
+  left: 5px;
   z-index: -1;
   width: 16px;
   height: 15px;
